# end-of-line

./: .basedpyright-baseline.json  .gitignore  .jscpd.json  CLAUDE.md  CONTEXT.md  README.md  adventure-time-facts.md  pyproject.toml  tron-facts.md
.githooks/: pre-commit-local
brainstorm/: clu-dist-sys.md  clu-end-user.md  clu-red-team.md
docs/: _outline.md  architecture.md  contract.md  conventions.md  operations.md  reference.md
end_of_line/: __init__.py  _pty_spawn_shim.py  _xdg_guard.py  activity_hook.py  cli.py  config.py  coolant.py  cross_plan_rules.py  demo.py  demo_worker.py  dispatch.py  dry_merge.py  fleet.py  heartbeat_daemon.py  inbox.py  monitor.py  notify.py  notify_base.py  notify_discord.py  notify_discord_http.py  notify_discord_inbound.py  notify_imessage.py  notify_imessage_inbound.py  notify_inbound.py  plan_parser.py  queue.py  quota.py  registry.py  state.py  state_blocker.py  state_locator.py  supervisor.py  top.py  top_layout.py  top_registry.py  top_render.py  watch.py  webserver.py  worker-settings.template.json
examples/: HealthData.orchestrator.json  clu-discord-inbound.service  clu-phase-skill.md  clu-tick-all.sh  clu.discord_inbound.plist  clu.inbound.plist  clu.tick.plist  fake-worker.sh  hardened.orchestrator.json
plans/: RESUME-env-inject-91.md  RESUME-verify-gate-93.md  RESUME.md  adventure-time-smoke-lore.md  adventure-time-smoke.md  attestation-gate-cmd-verify.md  attestation-gate-schema-config.md  attestation-gate.md  auto-archive-on-merge-config-docs.md  auto-archive-on-merge-merged-detection.md  auto-archive-on-merge-rule.md  auto-archive-on-merge.md  basedpyright-drain-gate.md  basedpyright-drain.md  blocker-lifecycle-migrate.md  blocker-lifecycle.md  blocker-smoke-blocker.md  blocker-smoke.md  bundle-brainstorm-skill.md  bundle-plan-skill-docs.md  clu-dashboard-blocked-serve.md  clu-dashboard-blocked-top.md  clu-dashboard-blocked.md  clu-demo-showcase-longer.md  clu-demo-showcase.md  clu-docs-architecture.md  clu-docs-audit.md  clu-docs-claude-md.md  clu-inbox.md  clu-logs.md  clu-monitor-docs.md  clu-orphan-process-zombie-state.md  clu-queue-add.md  clu-queue-docs.md  clu-queue-list.md  clu-queue-primitive.md  clu-queue-repair.md  clu-queue.md  clu-selftest.md  clu-ship-ergonomics-cli.md  (+78 more)
scripts/: canary.sh  partest.py
tests/: __init__.py  test_activity_callback.py  test_activity_hook_module.py  test_answer.py  test_attestations.py  test_auto_archive_rule.py  test_blocker_round_trip.py  test_blockers.py  test_cli_hints.py  test_cli_ship.py  test_cli_validate.py  test_cli_validation.py  test_clu_inbox_surface.py  test_clu_reply_skill.py  test_clu_testcase.py  test_cmd_attest.py  test_cmd_init_notify_prompts.py  (+116 more)
(+179 files in other folders)
